# ChangeLog for net-misc/sipsak
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/sipsak/ChangeLog,v 1.18 2008/08/16 16:05:19 tove Exp $

  16 Aug 2008; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove stkn from metadata.xml (#27693)

  03 Feb 2008; Fabian Groffen <grobian@gentoo.org> sipsak-0.9.1.ebuild,
  sipsak-0.9.5.ebuild, sipsak-0.9.6_p1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  21 Oct 2007; Markus Meier <maekke@gentoo.org> sipsak-0.9.1.ebuild,
  sipsak-0.9.5.ebuild, sipsak-0.9.6_p1.ebuild:
  add some quotes and x86 stable, bug #143842

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  27 Nov 2006; Timothy Redaelli <drizzt@gentoo.org> sipsak-0.9.6_p1.ebuild:
  Added ~x86-fbsd keyword.

  13 Mar 2006; Scott Stoddard <deltacow@gentoo.org> sipsak-0.9.6_p1.ebuild:
  Added ~amd64.

*sipsak-0.9.6_p1 (02 Feb 2006)

  02 Feb 2006; Daniel Black <dragonheart@gentoo.org>
  +sipsak-0.9.6_p1.ebuild:
  version bump

*sipsak-0.9.5 (25 Nov 2005)

  25 Nov 2005; Daniel Black <dragonheart@gentoo.org> +sipsak-0.9.5.ebuild:
  version bump thanks to Nils Ohlmeier (bug #113118)

  21 Aug 2005; Fabian Groffen <grobian@gentoo.org> sipsak-0.9.1.ebuild:
  Marking ~ppc-macos (bug #91898)

*sipsak-0.9.1 (21 Aug 2005)

  21 Aug 2005; Daniel Black <dragonheart@gentoo.org> +sipsak-0.9.1.ebuild:
  version bump. ~ppc keyword added as per bug #91898

  09 May 2005; Stefan Knoblich <stkn@gentoo.org> sipsak-0.8.12.ebuild:
  Changed HOMEPAGE to new url (bug #91898).

  07 May 2005; Stefan Knoblich <stkn@gentoo.org> sipsak-0.8.6.ebuild:
  Stable on x86.

*sipsak-0.8.12 (07 May 2005)

  07 May 2005; Stefan Knoblich <stkn@gentoo.org> +sipsak-0.8.12.ebuild:
  Version bump.

  22 Oct 2004; Jason Wever <weeve@gentoo.org> sipsak-0.8.6.ebuild:
  Added ~sparc keyword.

  08 Aug 2004; Tom Martin <slarti@gentoo.org> sipsak-0.8.6.ebuild: