@@ -1,4 +1,4 @@
 DIST sipsak-0.9.6-1.tar.gz 158776 RMD160 d5949e4309bda732b5aee462a4488bb9d850fe5a SHA1 6d2fd2c90ea04be749e48927b3e7fc08c52166b6 SHA256 5064c56d482a080b6a4aea71821b78c21b59d44f6d1aa14c27429441917911a9
-EBUILD sipsak-0.9.6_p1.ebuild 994 RMD160 0e6f0c551d10b922f82f2f6a299bdb28dc383d67 SHA1 5fb0af3c7307bc642e388678c742c44ced7ee845 SHA256 c41bf88d8271f5832d8a2924be99c1c0934e5bb01d2067cdb4690d2b5d7db091
-MISC ChangeLog 2318 RMD160 678ef84b6efd02b23b389135753ce4739a4e68ef SHA1 fe7bbbb8f88d61a84aaad43e23b9727a36d09777 SHA256 be38e7eb781278f4efff8dc2e62e00c41e989c844cb5694f0787edf1e1747b57
+EBUILD sipsak-0.9.6_p1.ebuild 980 RMD160 e2e718b82f57d05a9933e38ba53533d18263baed SHA1 91b1f6962bc9319ffb33590ff88512868125d67b SHA256 90923c7380dd4eae9a72346613397e134d6d09f835663e9cdf5550145d2de19a
+MISC ChangeLog 2507 RMD160 fbefd9721710e236b20d495cb99fa7dc5c26e9d5 SHA1 433f55fa188bdab59e5fe08d5b70956dcd839bf0 SHA256 088105ca682cfcd17b8542ad83f085a0e92eec7c69c2120dc9f30fdfc12a6c75
 MISC metadata.xml 159 RMD160 1cb780cd4240aaeb1b22a09a786b8ed4b0803823 SHA1 c96c65dcb37a559953bf3446b6719b0cac3585a8 SHA256 6831e631b05a25ddae6c3e148d49b98877ee1dd318185a0c95f3cad8a89bf34d
