@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/sipsak
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/sipsak/ChangeLog,v 1.18 2008/08/16 16:05:19 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/sipsak/ChangeLog,v 1.19 2009/09/23 19:44:49 patrick Exp $
+
+  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> sipsak-0.8.6.ebuild,
+  sipsak-0.8.12.ebuild, sipsak-0.9.1.ebuild, sipsak-0.9.5.ebuild,
+  sipsak-0.9.6_p1.ebuild:
+  Remove virtual/libc
 
   16 Aug 2008; Torsten Veller <tove@gentoo.org> metadata.xml:
   Remove stkn from metadata.xml (#27693)
